syntax = "proto3";
package  go_micro_services;

import "google/protobuf/timestamp.proto";
import "commons.proto";

option go_package = "pb/";


service ProductService{
  rpc GetProductById(ById) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(ById) returns (ProductResponse);
  rpc ListProducts(empty) returns (ProductResponseRepeated);
}

message Product {
  string id = 1;
  string name = 2;
  string sku = 3;
  int64 stock = 4;
  int64 price = 5;
  string categoryId =6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}
message ProductResponse{
  int64 code=1;
  string message=2;
  Product data=3;
}
message ProductResponseRepeated{
  int64 code=1;
  string message=2;
  repeated Product data=3;
}
message UpdateProductRequest{
  string id=1;
  optional string categoryId=2;
  optional string name=3;
  optional int64 price=4;
  optional int64 stock=5;
}
message CreateProductRequest{
  string categoryId=1;
  string name=2;
  int64 price=3;
  int64 stock=4;
}